--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,8 +1,8 @@
 platform :ios, '9.0'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-target 'ShareDrawerState' do
-  # Pods for ShareDrawerState
+target 'Demo' do
+  # Pods for Demo
   pod 'FBLazyVector', :path => "../node_modules/react-native/Libraries/FBLazyVector"
   pod 'FBReactNativeSpec', :path => "../node_modules/react-native/Libraries/FBReactNativeSpec"
   pod 'RCTRequired', :path => "../node_modules/react-native/Libraries/RCTRequired"
@@ -34,7 +34,7 @@ target 'ShareDrawerState' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
-  target 'ShareDrawerStateTests' do
+  target 'DemoTests' do
     inherit! :search_paths
     # Pods for testing
   end
@@ -42,10 +42,10 @@ target 'ShareDrawerState' do
   use_native_modules!
 end
 
-target 'ShareDrawerState-tvOS' do
-  # Pods for ShareDrawerState-tvOS
+target 'Demo-tvOS' do
+  # Pods for Demo-tvOS
 
-  target 'ShareDrawerState-tvOSTests' do
+  target 'Demo-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
   end
