--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-native-reanimated": "1.3.0",
     "react-native-screens": "2.0.0-alpha.3",
     "react-navigation": "4.0.10",
-    "react-navigation-drawer": "2.2.2"
+    "react-navigation-drawer": "2.2.2",
+    "react-navigation-stack": "1.9.3"
   },
   "devDependencies": {
     "@babel/core": "7.6.2",
@@ -30,5 +31,11 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "prettier": {
+    "bracketSpacing": true,
+    "jsxBracketSameLine": true,
+    "singleQuote": true,
+    "trailingComma": "all"
   }
 }
